Update kboot.conf to reflect previous commit.

--- a/kboot.conf
+++ b/kboot.conf
@@ -37,6 +37,10 @@ videomode=10
 ; If no value is set/set invalid/commented, XeLL won't change CPU Speed
 speedup=1
 
+# Console colors
+# Format is BGRA, and the Alpha channel is ignored.
+bg_color=0x00000000
+fg_color=0xFFFFFF00
 
 # Linux/ELF BootMenu
 # Supplying boot-entries is optional - you can delete those from the config to just set "General XeLL options"
